# unified-intelligence-cli

./: .dockerignore  .env.example  .gitignore  AUTOMATION_COMPLETE.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_COMPARISON.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_SUMMARY.md  DOCKER_DEPLOYMENT_SOLUTION.md  Dockerfile  GROK_CHECKPOINT_1.md  GROK_CODE_REVIEW.md  GROK_FINAL_VERIFICATION.md  IMPROVEMENTS_SUMMARY.md  INSTALL.md  INSTALL_BUILD_TOOLS.sh  INSTALL_DOCKER.sh  LLAMA_CPP_DEPLOYMENT_PLAN.md  PIPELINE_WEEKS_4-6.md  QUICKSTART.md  QUICKSTART_RELEASE.md  README.md  REFACTORING_ASSESSMENT.md  RELEASE.md  RELEASE_COMPLETE_STATUS.md  RELEASE_NOW.md  RELEASE_STATUS.md  ROADMAP_COMPLETION.md  STRATEGIC_ANALYSIS_SYNTHESIS.md  TDD_METHODOLOGY_SUMMARY.md  UI_CLI_INTEGRATION.md  USER_SIMULATION_ANALYSIS.md  analyze_functions.py  demo_full_workflow.py  docker-compose.yml  grok_checkpoint1.py  grok_commit_review.py  grok_final_verification.py  grok_review_commits.py  (+7 more)
config/: agent_handoffs.json  agent_task_templates.yml  syd2_agent.yml
docs/: AGENT_CONTAINERIZATION_PLAN.md  AGILE_STORIES_SCALABILITY_DISTRIBUTED_COMPUTE.md  CT_DSL_CLEAN_ARCHITECTURE.md  CT_DSL_EXISTING_SYSTEMS_ANALYSIS.md  CT_DSL_RESEARCH_SYNTHESIS.md  CT_DSL_RESEARCH_WORKFLOW.md  DATA_COLLECTION_TASKS_293.md  DSL_CLI_INTEGRATION_COMPLETE.md  DSL_COMPLETE_JOURNEY.md  GPU_PRICING_RESEARCH_OCT_2025.md  GROK_COMMIT_ANALYSIS.md  HF_SPACES_DEPLOYMENT_GUIDE.md  HYBRID_MODE_BENCHMARK_RESULTS.md  HYBRID_ORCHESTRATION_GUIDE.md  MODEL_TRAINING_STRATEGY_PIPELINE_ULTRATHINK.md  OPENAI_AGENTS_SDK_ARCHITECTURE.md  ORCHESTRATION_MIGRATION_GUIDE.md  PARALLEL_COMPOSITION_SEMANTICS.md  PHASE_1.5_VALIDATION_SUMMARY.md  PHASE_2_BASELINE_EVALUATION_COMPLETE.md  PHASE_2_FINAL_STATUS.md  PHASE_2_IMPLEMENTATION_COMPLETE.md  PHASE_3_LORA_TRAINING_SETUP.md  QUICK_START_PHASE_2.md  SERVER_DEPLOYMENT_PLAN_SYD2.md  SPRINT_1_TYPE_SYSTEM_PLAN.md  STORY_2_HORIZONTAL_ORCHESTRATION_RESEARCH.md  SYD2_AUTONOMOUS_AGENT_DESIGN.md  SYD2_DEPLOYMENT_STATUS.md  SYSTEM_OPTIMIZATION_REPORT.md  TASK_GENERATION_ULTRATHINK.md  TEAM_ROUTING_CLI_GUIDE.md  TEAM_ROUTING_PERFORMANCE_ANALYSIS.md  TONGYI_LOCAL_OPTIMIZATION_PIPELINE_ULTRATHINK.md  TUI_MODULE_PLAN.md  WEEK_10_AGENTS_SDK_INTEGRATION_STRATEGY.md  WEEK_11_AGENT_SCALING_STRATEGY_ULTRATHINK.md  WEEK_11_COMPLETE.md  WEEK_11_EXECUTIVE_SUMMARY.md  WEEK_11_PHASE_1_COMPLETE.md  (+16 more)
examples/: README.md  dsl_example.py  dsl_real_interpreter.py  run_dsl_example.sh  run_real_interpreter.sh
results/: baseline_metrics.json
scripts/: README.md  README_GROK.md  README_SYD2_AGENT.md  agent_executor_consultation.py  analyze_collected_data.py  analyze_training_data.py  architecture_consultation.py  architecture_critique_question.txt  architecture_review.py  automate-release.sh  benchmark_agent_scaling.py  benchmark_hybrid.py  benchmark_orchestrators.py  check-release.sh  consult_grok.py  create_benchmarks.py  deploy_llamacpp.sh  deploy_llamacpp_docker.sh  evaluate_baseline.py  extract_tasks.py  fix-and-release.sh  fix-github-auth.sh  grok_chat.py  grok_code_review.py  grok_consultation.py  grok_implement_refactoring.py  grok_implement_refactoring_v2.py  grok_interactive_refactor.py  grok_review_commits.py  grok_review_project.py  grok_session.py  grok_strategic_analysis.py  main_consultation.py  monitor-release.sh  monitor_syd2.sh  parallel_data_collection.py  parallel_upload.sh  preflight.py  query_grok_qwen3.py  query_grok_training_stuck.py  (+28 more)
src/: composition.py  config.py  exceptions.py  main.py  tools.py
strategy/: A1_CLAUDE_ASSESSMENT.md  A2_COORDINATOR_PATTERN.md  A3_GROK_ANALYSIS.md  A4_COMPARISON_SYNTHESIS.md  grok_strategic_analysis.py
training/: CRITICAL_ERROR_POSTMORTEM.md  GROK_QWEN3_RECOMMENDATIONS.md  GROK_TRAINING_DIAGNOSTIC.md  README.md  (+6 more)
(+201 files in other folders)
