[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-intelligence-cli"
version = "1.0.0"
description = "Production-ready multi-agent task orchestration framework with Clean Architecture"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Unified Intelligence CLI Team", email = "noreply@example.com"}
]
maintainers = [
    {name = "Unified Intelligence CLI Team", email = "noreply@example.com"}
]
keywords = [
    "ai",
    "agents",
    "multi-agent",
    "orchestration",
    "cli",
    "llm",
    "grok",
    "automation",
    "clean-architecture"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]

dependencies = [
    "click>=8.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.0.0",
    "gradio-client>=1.0.0",
    "lark>=1.0.0",
    "rich>=10.0.0",
    "paramiko>=3.0.0",
    "pyyaml>=6.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "flake8>=7.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/hollis-source/unified-intelligence-cli"
Documentation = "https://github.com/hollis-source/unified-intelligence-cli#readme"
Repository = "https://github.com/hollis-source/unified-intelligence-cli"
Issues = "https://github.com/hollis-source/unified-intelligence-cli/issues"
Changelog = "https://github.com/hollis-source/unified-intelligence-cli/releases"

[project.scripts]
ui-cli = "src.main:main"
unified-intelligence-cli = "src.main:main"

[tool.setuptools]
packages = [
    "src",
    "src.adapters",
    "src.adapters.agent",
    "src.adapters.cli",
    "src.adapters.llm",
    "src.adapters.orchestration",
    "src.entities",
    "src.factories",
    "src.interfaces",
    "src.use_cases",
    "src.validators",
    "src.utils",
    "src.routing",
    "src.dsl",
    "src.dsl.adapters",
    "src.dsl.entities",
    "src.dsl.interfaces",
    "src.dsl.tasks",
    "src.dsl.types",
    "src.dsl.use_cases",
]

[tool.setuptools.package-data]
src = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests"
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true